CV VAC + SELECT fix

--- a/WebContent/search_cv.html
+++ b/WebContent/search_cv.html
@@ -6,8 +6,7 @@
 	<body>
 		<H2>Uber Super Matching Duber</H2>
 		<br /><br /><br />
-		<form name="Form" method="post" action="MainServlet">
-			Table: <input type="text" name="tableInput" value="cv"/> <br/><br/>
+		<form name="Form" method="post" action="Search_CV_Results">
 		    Woonplaats: <input type="text" name="woonplaatsInput"/> <br/><br/>
 		    Rijbewijs:	<input type="radio" name="rijbewijs" value="t" />Ja
 		    			<input type="radio" name="rijbewijs" value="f" />Nee
