--- a/WebContent/search_vac.html
+++ b/WebContent/search_vac.html
@@ -6,11 +6,9 @@
 	<body>
 		<H2>Uber Super Matching Duber</H2>
 		<br /><br /><br />
-		<form name="Form" method="post" action="MainServlet">
-			Table: <input type="text" name="tableInput" value="cv"/> <br/><br/>
-		    Woonplaats: <input type="text" name="woonplaatsInput"/> <br/><br/>
-		    Rijbewijs:	<input type="radio" name="rijbewijs" value="t" />Ja
-		    			<input type="radio" name="rijbewijs" value="f" />Nee
+		<form name="Form" method="post" action="Search_VAC_Results">
+		    Plaats: <input type="text" name="plaatsInput"/> <br/><br/>
+		    Niveau:	<input type="text" name="niveauInput"/> <br/><br/>
 		    			
 		    <br /><br /><input type="submit" value="Continue" />
 		</form>
