--- a/WebContent/search_vac.html
+++ b/WebContent/search_vac.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Title</title>
-	</head>
-	<body>
-		<H2>Uber Super Matching Duber</H2>
-		<br /><br /><br />
-		<form name="Form" method="post" action="Search_VAC_Results">
-		    Plaats: <input type="text" name="plaatsInput"/> <br/><br/>
-		    Niveau:	<input type="text" name="niveauInput"/> <br/><br/>
-		    			
-		    <br /><br /><input type="submit" value="Continue" />
-		</form>
-	</body>
+<head>
+<title>Title</title>
+</head>
+<body>
+	<H2>Uber Super Matching Duber</H2>
+	<br />
+	<br />
+	<br />
+	<form name="Form" method="post" action="Search_VAC_Results">
+		Plaats: <input type="text" name="plaatsInput" /> <br /> <br />
+		Niveau: <input type="text" name="niveauInput" /> <br /> <br /> 
+		Onderstaande onderdelen hebben nog geen functie.<br /><br /> 
+		IT Kennis: <input type="text" name="itkennisInput" /> <br /> <br /> 
+		Eisen: <input type="text" name="eisenInput" /> <br /> <br /> 
+		Bedrijfsnaam: <input type="text" name="bedrijfsnaamInput" /> <br /> <br /> 
+		Functie: <input type="text" name="functieInput" /> <br /> <br /> 
+		Uren: <input type="text" name="urenInput" /> <br /> <br /> 
+		Taal ID: <input type="text" name="taalidInput" /> <br /> <br /> 
+		Salaris: <input type="text" name="salarisInput" /> <br /> <br /> 
+		Omschrijving: <input type="text" name="omschrijvingInput" /> <br /> <br /> 
+		Kennis: <input type="text" name="kennisInput" /> <br /> <br /> 
+		Dienstverband: <input type="text" name="dienstverbandInput" /> <br /> <br /> 
+		<input type="submit" value="Continue" />
+	</form>
+</body>
 </html>
