--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Title</title>
-	</head>
-	<body>
-		<H2>Uber Super Matching Duber</H2>
-		<br /><br /><br />
-		<a href="search_cv.html">Een cv zoeken</a> <br />
-		<a href="search_vac.html">Een vacature zoeken</a>
-	</body>
+<head>
+<title>Title</title>
+</head>
+<body>
+	<H2>Uber Super Matching Duber</H2>
+	<br />
+	<br />
+	<br />
+	<a href="search_cv.html">Een cv zoeken</a>
+	<br />
+	<a href="search_vac.html">Een vacature zoeken</a>
+</body>
 </html>
