--- a/WebContent/search_cv.html
+++ b/WebContent/search_cv.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Title</title>
-	</head>
-	<body>
-		<H2>Uber Super Matching Duber</H2>
-		<br /><br /><br />
-		<form name="Form" method="post" action="Search_CV_Results">
-		    Woonplaats: <input type="text" name="woonplaatsInput"/> <br/><br/>
-		    Rijbewijs:	<input type="radio" name="rijbewijs" value="t" />Ja
-		    			<input type="radio" name="rijbewijs" value="f" />Nee
-		    			
-		    <br /><br /><input type="submit" value="Continue" />
-		</form>
-	</body>
+<head>
+<title>Title</title>
+</head>
+<body>
+	<H2>Uber Super Matching Duber</H2>
+	<br />
+	<br />
+	<br />
+	<form name="Form" method="post" action="Search_CV_Results">
+		Woonplaats: <input type="text" name="woonplaatsInput" /> <br /><br /> 
+		Rijbewijs: <input type="radio" name="rijbewijs" value="t" />Ja 
+			<input type="radio" name="rijbewijs" value="f" />Nee <br /><br /> 
+		Onderstaande onderdelen hebben nog geen functie.<br /><br /> 
+		Voornaam: <input type="text" name="voornaamInput" /> <br /><br /> 
+		Achternaam: <input type="text" name="achternaamInput" /> <br /><br /> 
+		Tussenvoegsels: <input type="text" name="tussenvoegselsInput" /> <br /><br /> 
+		Opleiding: <input type="text" name="opleidingInput" /> <br /><br /> 
+		Jaren Werkervaring: <input type="text" name="jaren_werkervaringInput" /> <br /><br /> 
+		Cursussen: <input type="text" name="cursussenInput" /> <br /><br /> 
+		Taal ID: <input type="text" name="taalidInput" /> <br /><br /> 
+		Beroep: <input type="text" name="beroepInput" /> <br /><br /> 
+		<input type="submit" value="Continue" />
+	</form>
+</body>
 </html>
