--- a/WebContent/search_cv.html
+++ b/WebContent/search_cv.html
@@ -10,13 +10,15 @@
 	<br />
 	<form name="Form" method="post" action="Search_CV_Results">
 		Woonplaats: <input type="text" name="woonplaatsInput" /> <br /><br /> 
-		Rijbewijs: <input type="radio" name="rijbewijs" value="t" />Ja 
-			<input type="radio" name="rijbewijs" value="f" />Nee <br /><br /> 
+		Rijbewijs: <input type="radio" name="rijbewijsInput" value="t" />Ja 
+			<input type="radio" name="rijbewijsInput" value="f" />Nee <br /><br /> 
+		Opleiding: <input type="text" name="opleidingInput" /> <br /><br /> 
+		
 		Onderstaande onderdelen hebben nog geen functie.<br /><br /> 
+		
 		Voornaam: <input type="text" name="voornaamInput" /> <br /><br /> 
 		Achternaam: <input type="text" name="achternaamInput" /> <br /><br /> 
 		Tussenvoegsels: <input type="text" name="tussenvoegselsInput" /> <br /><br /> 
-		Opleiding: <input type="text" name="opleidingInput" /> <br /><br /> 
 		Jaren Werkervaring: <input type="text" name="jaren_werkervaringInput" /> <br /><br /> 
 		Cursussen: <input type="text" name="cursussenInput" /> <br /><br /> 
 		Taal ID: <input type="text" name="taalidInput" /> <br /><br /> 
