--- a/WebContent/search_vac.html
+++ b/WebContent/search_vac.html
@@ -9,19 +9,10 @@
 	<br />
 	<br />
 	<form name="Form" method="post" action="Search_VAC_Results">
-		Plaats: <input type="text" name="plaatsInput" /> <br /> <br />
-		Niveau: <input type="text" name="niveauInput" /> <br /> <br /> 
-		Onderstaande onderdelen hebben nog geen functie.<br /><br /> 
-		IT Kennis: <input type="text" name="itkennisInput" /> <br /> <br /> 
-		Eisen: <input type="text" name="eisenInput" /> <br /> <br /> 
-		Bedrijfsnaam: <input type="text" name="bedrijfsnaamInput" /> <br /> <br /> 
-		Functie: <input type="text" name="functieInput" /> <br /> <br /> 
-		Uren: <input type="text" name="urenInput" /> <br /> <br /> 
-		Taal ID: <input type="text" name="taalidInput" /> <br /> <br /> 
-		Salaris: <input type="text" name="salarisInput" /> <br /> <br /> 
-		Omschrijving: <input type="text" name="omschrijvingInput" /> <br /> <br /> 
-		Kennis: <input type="text" name="kennisInput" /> <br /> <br /> 
-		Dienstverband: <input type="text" name="dienstverbandInput" /> <br /> <br /> 
+		Vul hier uw gegevens in om naar vacatures te zoeken op basis van uw cv. <br /> <br /> 
+		Naam: <input type="text" name="plaatsInput" /> <br /> <br />
+		Achternaam: <input type="text" name="achternaamInput" /> <br /> <br />
+		Woonplaats: <input type="text" name="woonplaatsInput" /> <br /> <br />
 		<input type="submit" value="Continue" />
 	</form>
 </body>
