--- a/WebContent/about.html
+++ b/WebContent/about.html
@@ -11,9 +11,10 @@
 	<script type="text/javascript">
 		Cufon.replace('h1,h2,h3,h4,h5,#menu,#copy,.blog-date');
 	</script>
+	<script type="text/javascript" src="js/fancyzoom.min.js"></script>
 	<script type="text/javascript" charset="utf-8">
 		$(document).ready(function() {
-			$('div.photo a').fancyZoom({directory: 'images/zoom', scaleImg: true, closeOnClick: true});
+			$('div.photo a').fancyZoom({scaleImg: true, closeOnClick: true});
 		});
 	</script>
 	<link rel="stylesheet" href="css/main.css" type="text/css" />
@@ -22,11 +23,10 @@
 	<div id="bg">
 		<div class="wrap">
 			<h1><a href="index.html">JobMatcher</a></h1>
-
 			<div id="mainmenu">
 				<ul id="menu">
-					<li><a class="current" href="#">Home</a></li>
-					<li><a href="about.html">Over ons</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a class="current" href="#">Over ons</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
@@ -58,32 +58,14 @@
 			</div>
 
 			<div id="main">
-				<div id="intro">
-					<h2>Welkom</h2>
-					<p>Welkom op de JobMatcher website. Op deze pagina kunt u zowel CV's als vacatures opzoeken. Wij wensen u veel zoekplezier. Doei.</p>
-				</div>
-
-				<div id="bits">
-					<div class="bit">
-						<h4>Zoek naar een CV</h4>
-						<div class="photo">
-							<a href="search_cv.html"><img src="images/handshake2.png" height=100 alt="Thumb" /></a>
-						</div>
-						<p>Bent u op zoek naar potentiële werknemers, kijk dan hier.</p>
-						<p class="more"><a href="search_cv.html">Read More</a></p>
-					</div>
-					<div class="bit last">
-						<h4>Zoek naar een vacature</h4>
-						<div class="photo">
-							<a href="search_vac.html"><img src="images/handshake2.png" height=100 alt="Thumb" /></a>
-						</div>
-						<p>Bent u op zoek naar een baan, kijk dan hier.</p>
-						<p class="more"><a href="search_vac.html">Read More</a></p>
-					</div>
-					<div class="clear"></div>
-				</div>
+				<h2 class="inner">Over ons</h2>
+				
+				<p>Nunc eget nunc libero. Nunc commodo euismod massa quis vestibulum. Proin mi nibh, dignissim a pellentesque at, ultricies sit amet sapien. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vel lorem eu libero laoreet facilisis. Aenean placerat, ligula quis placerat iaculis, mi magna luctus nibh, adipiscing pretium erat neque vitae augue. Quisque consectetur odio ut sem semper commodo. Maecenas iaculis leo a ligula euismod condimentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Ut enim risus, rhoncus sit amet ultricies vel, aliquet ut dolor. Duis iaculis urna vel massa ultricies suscipit. Phasellus diam sapien, fermentum a eleifend non, luctus non augue.</p>
+				
+				<h3>Tweede kopje</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vel lorem eu libero laoreet facilisis. Aenean placerat, ligula quis placerat iaculis, mi magna luctus nibh, adipiscing pretium erat neque vitae augue. Quisque consectetur odio ut sem semper commodo. Maecenas iaculis leo a ligula euismod condimentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Ut enim risus, rhoncus sit amet ultricies vel, aliquet ut dolor. Duis iaculis urna vel massa ultricies suscipit. Phasellus diam sapien, fermentum a eleifend non, luctus non augue.</p>
 			</div>
-			
+
 			<div id="side">
 				<h4>Laatste nieuws</h4>
 				<div class="news">
@@ -96,7 +78,7 @@
 				</div>
 			</div> 
 		</div>
-			
+
 		<div id="footer">
 			<div id="footerbg">
 				<div class="wrap">
