--- a/WebContent/about.html
+++ b/WebContent/about.html
@@ -26,6 +26,9 @@
 			<div id="mainmenu">
 				<ul id="menu">
 					<li><a href="index.html">Home</a></li>
+					<li><a href="#">Matchen</a>
+						<ul><li><a href="search_cv.html">Zoek een CV</a></li><li><a href="search_vac.html">Zoek een vacature</a></li><li></ul>
+					</li>
 					<li><a class="current" href="#">Over ons</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
