--- a/WebContent/contact.html
+++ b/WebContent/contact.html
@@ -26,6 +26,9 @@
 			<div id="mainmenu">
 				<ul id="menu">
 					<li><a href="index.html">Home</a></li>
+					<li><a href="#">Matchen</a>
+						<ul><li><a href="search_cv.html">Zoek een CV</a></li><li><a href="search_vac.html">Zoek een vacature</a></li><li></ul>
+					</li>
 					<li><a href="about.html">Over ons</a></li>
 					<li><a class="current" href="#">Contact</a></li>
 				</ul>
@@ -69,11 +72,11 @@
 						<input type="text" class="text" name="email" id="email" />
 					</p>
 					<p>
-						<label for="phone">Phone:</label>
+						<label for="phone">Telefoon:</label>
 						<input type="text" class="text" name="phone" id="phone" />
 					</p>
 					<p>
-						<label for="text">Message:</label>
+						<label for="text">Bericht:</label>
 						<textarea class="text" name="text" id="text"></textarea>
 					</p>
 					<p>
