Match options images

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -70,18 +70,18 @@
 					<div class="bit">
 						<h4>Zoek naar een CV</h4>
 						<div class="photo">
-							<a href="search_cv.html"><img src="images/handshake2.png" height=100 alt="Thumb" /></a>
+							<a href="search_cv.html"><img src="images/handshake.png" height=100 width=203 alt="Thumb" /></a>
 						</div>
 						<p>Bent u op zoek naar potentiële werknemers, kijk dan hier.</p>
-						<p class="more"><a href="search_cv.html">Read More</a></p>
+						<p class="more"><a href="search_cv.html">Klik hier!</a></p>
 					</div>
 					<div class="bit last">
 						<h4>Zoek naar een vacature</h4>
 						<div class="photo">
-							<a href="search_vac.html"><img src="images/handshake2.png" height=100 alt="Thumb" /></a>
+							<a href="search_vac.html"><img src="images/office_boss.png" height=100 width=203 alt="Thumb" /></a>
 						</div>
 						<p>Bent u op zoek naar een baan, kijk dan hier.</p>
-						<p class="more"><a href="search_vac.html">Read More</a></p>
+						<p class="more"><a href="search_vac.html">Klik hier!</a></p>
 					</div>
 					<div class="clear"></div>
 				</div>
