--- a/WebContent/search_cv.html
+++ b/WebContent/search_cv.html
@@ -62,7 +62,7 @@
 
 			<div id="main">
 				<div id="intro">
-					<h2>Zoek naar een CV</h2>
+					<h2 class="inner">Zoek naar een CV</h2>
 					<form name="Form" method="post" action="Search_CV_Results">
 						<label for="woonplaatsInput">Woonplaats</label>
 						<input type="text" class="text" name="woonplaatsInput" /> <br /><br /> 
