--- a/WebContent/search_vac.html
+++ b/WebContent/search_vac.html
@@ -66,7 +66,7 @@
 					<form name="Form" method="post" action="Search_VAC_Results">
 						Vul hier gegevens in om naar vacatures te zoeken.<br /> <br /> 
 						
-						<label for="plaatsInput">In de omgeving van</label>
+						<label for="plaatsInput">Plaats</label>
 						<input type="text" name="plaatsInput" required/> <br /> <br />
 						
 						<label for="itkennisInput">IT Kennis</label>
