--- a/WebContent/search_vac.html
+++ b/WebContent/search_vac.html
@@ -200,6 +200,14 @@
 					<li><a class="current" href="#">Matchen</a>
 						<ul><li><a href="search_cv.html">Zoek een CV</a></li><li><a href="search_vac.html">Zoek een vacature</a></li><li></ul>
 					</li>
+					<li><a href="#">Dashboards</a>
+						<ul>
+							<li><a href="http://infprj01-56.no-ip.org:8009/dashboard/bob">Bob</a></li>
+							<li><a href="http://infprj01-56.no-ip.org/dashboard/deborah/">Deborah</a></li>
+							<li><a href="http://infprj01-56.no-ip.org:8008/dashboard/patrick">Patrick</a></li>
+							<li><a href="http://infprj01-56.no-ip.org/dashboard/pepijn/">Pepijn</a></li>
+						</ul>
+					</li>
 					<li><a href="about.html">Over ons</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
