Fix special character

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -98,7 +98,7 @@
 				</div>
 				<div class="news">
 					<h5><a href="#">Start JobMatcher</a></h5>
-					<p>JobMatcher is vanaf nu officiëel beschikbaar!</p>
+					<p>JobMatcher is vanaf nu offici&#235;el beschikbaar!</p>
 				</div>
 			</div> 
 		</div>
