--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -56,7 +56,7 @@
 					<div>
 						<img src="images/banner/Banner3.png" width=960 height = 280 alt="" />
 						<div class="overlay transparent">
-							<h2>Mesurable Results</h2>
+							<h2>Measurable Results</h2>
 							<p>Resultaten waarvan uw mond open zal vallen.</p>
 						</div>
 					</div>
@@ -66,7 +66,7 @@
 			<div id="main">
 				<div id="intro">
 					<h2>Welkom</h2>
-					<p>Welkom op de JobMatcher website. Op deze pagina kunt u zowel CV's als vacatures opzoeken. Wij wensen u veel zoekplezier. Doei.</p>
+					<p>Welkom op de JobMatcher website. Op deze pagina kunt u zowel CV's als vacatures opzoeken. <br />Wij wensen u veel zoekplezier!</p>
 				</div>
 
 				<div id="bits">
