--- a/WebContent/search_vac.html
+++ b/WebContent/search_vac.html
@@ -57,7 +57,7 @@
 					<div>
 						<img src="images/banner/Banner3.png" width=960 height = 280 alt="" />
 						<div class="overlay transparent">
-							<h2>Mesurable Results</h2>
+							<h2>Measurable Results</h2>
 							<p>Resultaten waarvan uw mond open zal vallen.</p>
 						</div>
 					</div>
@@ -89,7 +89,7 @@
 						<label for="functieInput">Functie</label>
 						<input type="text" class="text" name="functieInput" required/> <br /> <br />
 						
-						<label for="niveauInput">Niveau</label>
+						<label for="niveauInput">Opleidingsniveau</label>
 						<input type="text" class="text" name="niveauInput" required/> <br /> <br />
 						
 						<label for="omschrijvingInput">Omschrijving</label>
