--- a/WebContent/about.html
+++ b/WebContent/about.html
@@ -11,7 +11,6 @@
 	<script type="text/javascript">
 		Cufon.replace('h1,h2,h3,h4,h5,#menu,#copy,.blog-date');
 	</script>
-	<script type="text/javascript" src="js/fancyzoom.min.js"></script>
 	<link rel="stylesheet" href="css/main.css" type="text/css" />
 </head>
 <body>
@@ -56,7 +55,7 @@
 					<div>
 						<img src="images/banner/Banner3.png" width=960 height = 280 alt="" />
 						<div class="overlay transparent">
-							<h2>Mesurable Results</h2>
+							<h2>Measurable Results</h2>
 							<p>Resultaten waarvan uw mond open zal vallen.</p>
 						</div>
 					</div>
