--- a/WebContent/search_cv.html
+++ b/WebContent/search_cv.html
@@ -92,6 +92,9 @@
 						
 						<label for="beroepInput">Beroep</label>   
 						<input type="text" class="text" name="beroepInput" required/> <br /><br /> 
+						
+						<label for="itKennisInput">IT Kennis</label>   
+						<input type="text" class="text" name="itKennisInput" required/> <br /><br /> 
 
 						<input class="submit" type="submit" value="Begin zoekopdracht" onClick="document.getElementById('floatingCirclesG').style.display='block'" />
 					</form>
