--- a/WebContent/contact.html
+++ b/WebContent/contact.html
@@ -63,14 +63,14 @@
 			</div>
 
 			<div id="main">
-				<h2 class="inner">Stuur ons een email.</h2>
+				<h2 class="inner">Stuur ons een email</h2>
 				<form method="post" action="contact.html">
 					<p>
-						<label for="name">Name:</label>
+						<label for="name">Naam:</label>
 						<input type="text" class="text" name="name" id="name" />
 					</p>
 					<p>
-						<label for="email">E-mail Address:</label>
+						<label for="email">E-mail Adres:</label>
 						<input type="text" class="text" name="email" id="email" />
 					</p>
 					<p>
