--- a/WebContent/contact.html
+++ b/WebContent/contact.html
@@ -12,6 +12,7 @@
 		Cufon.replace('h1,h2,h3,h4,h5,#menu,#copy,.blog-date');
 	</script>
 	<link rel="stylesheet" href="css/main.css" type="text/css" />
+	<link rel="shortcut icon" type="image/x-icon" href="http://infprj01-56.no-ip.org/favicon.ico" />
 </head>
 <body>
 	<div id="bg">
