--- a/WebContent/search_vac.html
+++ b/WebContent/search_vac.html
@@ -13,6 +13,7 @@
 	</script>
 	<link rel="stylesheet" href="css/main.css" type="text/css" />
 	<link rel="stylesheet" href="css/loadindic.css" type="text/css" />
+	<link rel="shortcut icon" type="image/x-icon" href="http://infprj01-56.no-ip.org/favicon.ico" />
 </head>
 <body>
 	<div id="bg">
