--- a/WebContent/about.html
+++ b/WebContent/about.html
@@ -66,11 +66,10 @@
 			<div id="main">
 				<h2 class="inner">Over ons</h2>
 				
-				<p>Nunc eget nunc libero. Nunc commodo euismod massa quis vestibulum. Proin mi nibh, dignissim a pellentesque at, ultricies sit amet sapien. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vel lorem eu libero laoreet facilisis. Aenean placerat, ligula quis placerat iaculis, mi magna luctus nibh, adipiscing pretium erat neque vitae augue. Quisque consectetur odio ut sem semper commodo. Maecenas iaculis leo a ligula euismod condimentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Ut enim risus, rhoncus sit amet ultricies vel, aliquet ut dolor. Duis iaculis urna vel massa ultricies suscipit. Phasellus diam sapien, fermentum a eleifend non, luctus non augue.</p>
-				
-				<h3>Tweede kopje</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vel lorem eu libero laoreet facilisis. Aenean placerat, ligula quis placerat iaculis, mi magna luctus nibh, adipiscing pretium erat neque vitae augue. Quisque consectetur odio ut sem semper commodo. Maecenas iaculis leo a ligula euismod condimentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Ut enim risus, rhoncus sit amet ultricies vel, aliquet ut dolor. Duis iaculis urna vel massa ultricies suscipit. Phasellus diam sapien, fermentum a eleifend non, luctus non augue.</p>
-			</div>
+<p>Groep 1 is een projectgroep bestaande uit studenten Informatica van de Hogeschool Rotterdam. Naar aanleiding van een opdracht binnen de studie zijn de studenten een samenwerkingsverbond aangegaan en hebben de groep gevormd. <p />
+<p>Deze website is puur bedoeld als weergave van de resultaten van de opdracht voor onze opdrachtgever. <p />			
+				<h3>Gegevensbewaking</h3>
+<p>De groep garandeert dat alle opgeslagen data de gehele dag wordt beveiligd.	</p>				</div>
 
 			<div id="side">
 				<h4>Laatste nieuws</h4>
